metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
/* ... */
	/************/
	
    .carousel .item {
    	height: 400px;
      z-index: 170;
      /*
      -webkit-transition: opacity 4s; 
      -moz-transition: opacity 4s; 
      -ms-transition: opacity 4s; 
      -o-transition: opacity 4s; 
      transition: opacity 4s;
      */
    	-webkit-transition:0.6s ease-in-out left;
    	-moz-transition:0.6s ease-in-out left;
    	-ms-transition:0.6s ease-in-out left;
    	-o-transition:0.6s ease-in-out left;
    	transition:0.6s ease-in-out left;
      max-height: 400px;
      overflow: hidden;
    }
    
    .carousel-caption {
      background-color: #555555; /*IE 8 fallback */
      background: rgba(0,0,0,0.3);
      position: absolute;
      top: 150px;
      left: 50%;
      margin: 0px 0px 0px -250px;
      width: 500px;
      max-height: 130px;
      z-index: 200;
      padding: 10px 20px 10px 20px;
      -webkit-border-radius: 6px;
         -moz-border-radius: 6px;
              border-radius: 6px;
      
    }
    
    .carousel-caption h1 {
      margin: 0px;
      line-height: 1.25;
      font-family: "Lato";
      font-weight: 400;
      font-size: 36px;
      color: #FDFDFD;
    }
    
    .carousel-caption .lead {
      margin: 0;
      line-height: 1;
      font-family: "Lato";
      font-weight: 300;
      font-size: 24px;
      color: #FDFDFD;
    }
    .carousel-caption .btn-primary {
      position: absolute;
      bottom: 20px;
      right: 20px;
    }

  /* MAIN BODY CSS
  -------------------------------------------------- */
  /* Main body containing sidebar and content */
    .main-body-padded {
      padding-top: 90px;
    }
    
	.subset-choice.keyword-search-link {
		background-color: #115E95;
		color: white;
		text-shadow: none;
		margin-bottom: 10px;
	}
	
	.keyword-search-link.active{
		background-color: #1981CC;
	}

    h2.nav-header {
      margin: 20px 10px 10px 15px;
      padding: 3px 0px 3px 0px;
      color: #555555;      
    }

    #refine .nav-list {
      margin: 20px auto auto auto;
    }
    
    ul#refine .nav-list .input-append {
      max-width: 200px;
    }

    #browse .nav-list {
      margin: 20px auto auto auto;
      border: 1px solid #CCCCCC;
    }
    
    ul#browse a i {
      margin-right: 10px;
    }
    
    ul#browse a {
      font: 300 16px/16px "Lato";
      color: #555555;
    }

    ul#browse a:hover, ul#browse a:focus  {
      color: #3F3F3F;
    }

  /* About CSS
  -------------------------------------------------- */
    #About {
		min-height: 800px;
    }
    
/* Stats styles 
  -------------------------------------------------- */
  #Profile{
  	width: 80%;
  	margin-left: 10%;
  	margin-right: 10%;
  }
    
   
  #Profile .charts{
  	margin-left: auto;
  	margin-right: auto;
  }
  
  /* The universal color for data */
svg .data{
  	color: #2B8282;
  	stroke: #2B8282;
  	fill: #2B8282;
  }
  
  /* The universal color for metadata */
svg .metadata{
  	color: #761012;
  	stroke: #761012;
  	fill: #761012;
  }
  
svg .packages{
	color: #0E69A1;
	stroke: #0E69A1;
	fill: #0E69A1;
}

svg .default{
	fill: #CCCCCC;
	stroke: #CCCCCC;
	color: #CCCCCC;
}
  
  /* Donut charts */  
  #metadata-chart,
#data-chart{
	height: 300px;
	width: 400px;	
}

#metadata-chart{
	float: left;
}

 .format-charts{
	margin-left: auto;
	margin-right: auto;
	width: 1100px;	
}
.format-charts > svg:first-child{
	margin: 0 30px 0 0;
}

.donut.default .donut-labels{
	visibility: hidden;
}

.donut.default .donut-title-count,
.donut.default .donut-title-text{
	fill: #CCCCCC;
}
.donut.default .donut-arc{
	fill: #CCCCCC;
}

.metadata .donut-title-count{
	color: #992222;
	fill: #992222;
}

.data .donut-title-count{
	color: #006a66;
	fill: #006a66;
}
.donut-title-count{
	font-size: 24px;
}
.donut-title-text,
.title{
	color: #555555;
	fill: #555555;
	font-size: 17px;
	line-height: 17px;
}
.donut-arc{
	transition: opacity .2s;
}
.donut-arc.inactive,
.donut-arc.inactive + .donut-labels{
	opacity: 0.2;
}
.donut-arc.active + .donut-labels{
	opacity: 1;
	font-weight: bold;
}
.donut-labels{
	font-size: 14px;
	opacity: 0.7;
	transition: opacity .2s;
}

/* Line Chart */
.upload-chart,
.temporal-coverage-chart{
	width: 800px;
}
#upload-chart-title{
	height: 80px;
	max-height: 105px;
}
svg .line{
	fill: none;
  	stroke-width: 2px;
}
svg .domain{
	fill: none;
	stroke-width: 1px;
	stroke: #555555;
}
svg .point{
	fill: #FFFFFF;
	stroke-width: 2px;
}
svg .line-chart-label{
	font-weight: bold;
	font-size: 14px;
	stroke-width: 0px;
	opacity: 0;
}
svg> .title{
	font-size: 15px;
}
svg .point:hover + .line-chart-label{
	opacity: 1;
	transition: all .5s;
}

.temporal-coverage-chart{
	margin-top: 20px;
}

/* Circle Badges */
.circle-badge{
	width: 900px;
	height: 60px;
}
.circle-badge .label{
	color: #555555;
	fill: #555555;
	stroke-width: 0px;
	font-size: 13px;
	font-weight: 300;
}
.circle-badge .count{
	color: #FFFFFF;
	fill: #FFFFFF;
	stroke-width: 0px;
	font-size: 20px;
}
.circle-badge .default{
	
}





  /* Metadata rendering CSS
  -------------------------------------------------- */
    #Metadata {
		min-height: 800px;
		width: 90%;
		margin-top: 125px;
    }
    
    #Metadata > .container{
		width: 100%;
	}
	
	#Metadata > a[href="#data"]{
		display: block;
		margin-bottom: 20px;
		font-size: 13px;
	}
	
	.citation{
		font-size: 20px;
		line-height: 30px;
		margin-bottom: 40px;
		border: 0px;
		box-shadow: none;
		-webkit-box-shadow: none;
		-moz-box-shadow: none;
		padding: 0px;
		background-color: transparent;
	}
	
	.citation .span10{
		width: 100%;
	}
    
    /* Google Map Images for Geographic Region */
    .georegion-map{
    	margin-left: 125px;
    	margin-bottom: 10px;
    	border: 1px solid #DDD;
    	padding: 7px;
    	border-radius: 4px;
    	-moz-border-radius: 4px;
    	-webkit-border-radius: 4px;
    }
    
    /* Download  and Publish buttons */
     #downloadPackage a.btn {
    	width: 100px;
    	margin-bottom: 8px;
    } 
    
    .download-this-package{
    	float: left;
    	height: 100%;
    	margin-left: 20px;
    }
/* ... */

